--- a/config/database.yml
+++ b/config/database.yml
@@ -18,8 +18,8 @@ default: &default
   adapter: postgresql
   encoding: unicode
   host: localhost
-  username: demand-progress
-  password: asdfasdf
+  username: <%= ENV.fetch("POSTGRESQL_USER", "demand-progress") %>
+  password: <%= ENV.fetch("POSTGRESQL_PASSWORD", "asdfasdf") %>
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
