--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "cypress": "^3.0.1"
+  },
+  "scripts": {
+    "cypress:open": "cypress open"
   }
 }
