Oops - just want one build

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,4 @@ script:
   - RAILS_ENV=test bundle exec rake db:setup
   - RAILS_ENV=test bundle exec rake
 env:
-  - POSTGRESQL_USER=root
-  - POSTGRESQL_PASSWORD=
+  - POSTGRESQL_USER=root POSTGRESQL_PASSWORD=
