--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: ruby
 rvm:
- - 2.3.1
+ - 2.5.1
 services:
   - postgresql
 script:
   - RAILS_ENV=test bundle exec rake db:setup
   - RAILS_ENV=test bundle exec rake
-env:
-  - POSTGRESQL_USER=root POSTGRESQL_PASSWORD=
+before_script:
+  - psql -c 'create database demand_progress_test' -U demand-progress
